crates/dioform/tests/listener_contract/fail/exhaustive_listener_event_matching.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
 --> tests/listener_contract/fail/exhaustive_listener_event_matching.rs:4:11
  |
4 |     match event {
  |           ^^^^^ pattern `_` not covered
  |
note: `FormListenerEvent` defined here
 --> src/lib.rs
  |
  | pub enum FormListenerEvent {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: the matched value is of type `FormListenerEvent`
  = note: `FormListenerEvent` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
  |
5 ~         FormListenerEvent::FieldReplaced => "field replaced",
6 ~         _ => todo!(),
  |

error[E0004]: non-exhaustive patterns: `_` not covered
  --> tests/listener_contract/fail/exhaustive_listener_event_matching.rs:10:11
   |
10 |     match event {
   |           ^^^^^ pattern `_` not covered
   |
note: `SubmitListenerEvent` defined here
  --> src/lib.rs
   |
   | pub enum SubmitListenerEvent {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `SubmitListenerEvent`
   = note: `SubmitListenerEvent` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
15 ~         SubmitListenerEvent::SubmissionSucceeded => "succeeded",
16 ~         _ => todo!(),
   |
